# MCP-Infostat

./: .gitignore  README.md  diagnostico_log.txt  diagnostico_resultado.json  pyproject.toml  server.py
data/: keyboard_smoke.csv
docs/especificaciones/validaciones/: AGENTE_CONTEXTO.md
mcp_infostat/: session.py
mcp_infostat/results/: __init__.py  capture.py  parser.py
mcp_infostat/ui/: launcher.py
tests/: test_parser.py  test_results_capture.py  test_session.py
